; ModuleID = '/home/carl/AnghaBench/linux/drivers/reset/hisilicon/extr_hi6220_reset.c_hi6220_media_deassert.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/reset/hisilicon/extr_hi6220_reset.c_hi6220_media_deassert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reset_controller_dev = type { i32 }
%struct.hi6220_reset_data = type { %struct.regmap* }
%struct.regmap = type { i32 }

@SC_MEDIA_RSTDIS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.reset_controller_dev*, i64)* @hi6220_media_deassert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hi6220_media_deassert(%struct.reset_controller_dev* %0, i64 %1) #0 {
  %3 = alloca %struct.reset_controller_dev*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.hi6220_reset_data*, align 8
  %6 = alloca %struct.regmap*, align 8
  store %struct.reset_controller_dev* %0, %struct.reset_controller_dev** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %3, align 8
  %8 = call %struct.hi6220_reset_data* @to_reset_data(%struct.reset_controller_dev* %7)
  store %struct.hi6220_reset_data* %8, %struct.hi6220_reset_data** %5, align 8
  %9 = load %struct.hi6220_reset_data*, %struct.hi6220_reset_data** %5, align 8
  %10 = getelementptr inbounds %struct.hi6220_reset_data, %struct.hi6220_reset_data* %9, i32 0, i32 0
  %11 = load %struct.regmap*, %struct.regmap** %10, align 8
  store %struct.regmap* %11, %struct.regmap** %6, align 8
  %12 = load %struct.regmap*, %struct.regmap** %6, align 8
  %13 = load i32, i32* @SC_MEDIA_RSTDIS, align 4
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @BIT(i64 %14)
  %16 = call i32 @regmap_write(%struct.regmap* %12, i32 %13, i32 %15)
  ret i32 %16
}

declare dso_local %struct.hi6220_reset_data* @to_reset_data(%struct.reset_controller_dev*) #1

declare dso_local i32 @regmap_write(%struct.regmap*, i32, i32) #1

declare dso_local i32 @BIT(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
